# ARADI

./: .gitignore  LICENSE  README.md  aradi.c  aradi.py  pybash.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
c/: README.md  aradi.c  functions.h  odzhan.c
pyaradi/: README.md  __init__.py  aradi.py  aradi_arg.py  aradi_core.py  aradi_utils.py
python/: aradi.py  config.py  functions.py
