[project]
    name = "pyaradi"
    version = "0.1.0"
    readme = {file = "README.md", content-type = "text/markdown"}
    license = {file = "LICENSE"}
    keywords = ["cryptography", "encryption"]
    description = "ARADI encryption implementation with CTR modes"
    authors = [
    {name = "Andreis Purim", email = "andreispurim@gmail.com"},
    {name = "Gustavo Praciano"},
    ]
    
[project.urls]
    Documentation = "https://github.com/AndreisPurim/ARADI/blob/main/README.md"
    Repository = "https://github.com/AndreisPurim/ARADI"
    Issues = "https://github.com/AndreisPurim/ARADI/issues"

[build-system]
    requires = ["setuptools >= 61.0"]
    build-backend = "setuptools.build_meta"
